# Qdrant_control

./: .gitignore  README.md  put_data2qdrant.py  pyproject.toml  qdrant_select.py
utils/: jina_embedding.py  json2txt.py  qdrant_control.py
